[package]
name = "elm-json"
version = "0.2.10"
authors = ["ilias <mail@ilias.xyz>"]
edition = "2018"

[dependencies]
indexmap = "1"
itertools = "0.9"
failure = "0.1"
petgraph = "0.5"
slog = { version = "2", features = ["max_level_trace", "release_max_level_debug"] }
textwrap = "0.12"
bincode = "1.3.1"
slog-term = "2.6.0"
slog-async = "2.5.0"
serde  = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.3"
colored = "2.0"
dialoguer = "0.6"
dirs = "3.0"
fs2 = "0.4"
isahc = { version = "0.9", features = ["static-ssl"] }
curl = {version = "0.4", features = ["static-curl", "static-ssl", "force-system-lib-on-osx", "http2"]}
ctrlc = "3.1"
console = "0.12"

[dev-dependencies]
assert_cmd = "0.11"
assert_fs = "0.11"
predicates = "1"

[lib]
name = "elm_json"
path = "src/lib/lib.rs"

[[bin]]
name = "elm-json"
path = "src/bin/main.rs"

[profile.release]
lto = true
panic = 'abort'
