[package]
name = "elm-json"
version = "0.2.10"
authors = ["ilias <mail@ilias.xyz>"]
edition = "2021"

[dependencies]
indexmap = "1"
itertools = "0.9"
petgraph = "0.5"
textwrap = "0.12"
bincode = "1.3.1"
serde  = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.3"
colored = "2.0"
dialoguer = "0.6"
dirs = "3.0"
fs2 = "0.4"
isahc = { version = "1.6.0", features = ["static-ssl", "http2"] }
curl = {version = "0.4.42", features = ["static-curl", "static-ssl", "force-system-lib-on-osx", "http2"]}
ctrlc = "3.1"
console = "0.12"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.2"
assert_fs = "1.0.6"
predicates = "2.1.0"

[lib]
name = "elm_json"
path = "src/lib/lib.rs"

[[bin]]
name = "elm-json"
path = "src/bin/main.rs"

[profile.release]
lto = true
panic = 'abort'
